basic: Schema: Support for VM.Standard.A1.Flex

--- a/deploy/basic/terraform/schema.yaml
+++ b/deploy/basic/terraform/schema.yaml
@@ -237,6 +237,9 @@ variables:
           - eq:
             - instance_shape 
             - "VM.Standard.E4.Flex"
+          - eq:
+            - instance_shape 
+            - "VM.Standard.A1.Flex"
 
   instance_shape_config_memory_in_gbs:
     type: integer
@@ -255,6 +258,9 @@ variables:
           - eq:
             - instance_shape 
             - "VM.Standard.E4.Flex"
+          - eq:
+            - instance_shape 
+            - "VM.Standard.A1.Flex"
 
   image_operating_system:
     type: string
