basic: schema flexible params required

--- a/deploy/basic/terraform/schema.yaml
+++ b/deploy/basic/terraform/schema.yaml
@@ -226,6 +226,7 @@ variables:
     maximum: 64
     title: "Number of OCPUs"
     description: "You can customize the number of OCPUs to a flexible shape."
+    required: true
     visible:
       and:
         - not:
@@ -247,6 +248,7 @@ variables:
     maximum: 1024
     title: "Amount of memory (GB)"
     description: "You can customize the amount of memory allocated to a flexible shape."
+    required: true
     visible:
       and:
         - not:
@@ -324,6 +326,7 @@ variables:
     maximum: 8000
     title: "Choose the minimum bandwidth"
     description: "Enter the minimum size of the flexible shape."
+    required: true
     visible:
       and:
         - and:
@@ -340,6 +343,7 @@ variables:
     maximum: 8000
     title: "Choose the maximum bandwidth"
     description: "Enter the maximum size of the flexible shape (Should be bigger than minimum size). The maximum service limit is set by your tenancy limits."
+    required: true
     visible:
       and:
         - and:
@@ -469,6 +473,7 @@ outputGroups:
       - deploy_id
       - deployed_to_region
       - mushop_basic_source_code
+      - platform
       - dev
       - comments
 
