--- a/src/storefront/package.json
+++ b/src/storefront/package.json
@@ -36,7 +36,7 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^9.0.0",
-    "gulp-pug": "^1.3.1",
+    "gulp-pug": "^4.0.1",
     "gulp-rev": "^9.0.0",
     "gulp-rev-replace": "^0.4.4",
     "http-proxy-middleware": "^2.0.0",
@@ -44,6 +44,8 @@
     "imagemin-pngquant": "^9.0.2",
     "jest": "^27.0.3",
     "minimist": "^1.2.5",
+    "postcss": "^8.3.0",
+    "pug": "^3.0.2",
     "webpack": "^4.46.0",
     "webpack-stream": "^6.1.2"
   },
