fixes dev build to fail gracefully on image optimizations not supported on volume mount

--- a/src/storefront/test/Dockerfile
+++ b/src/storefront/test/Dockerfile
@@ -6,6 +6,7 @@ RUN apk update && apk add --no-cache \
     automake \
     bash \
     g++ \
+    libtool \
     libc6-compat \
     libjpeg-turbo-dev \
     libpng-dev \
@@ -16,7 +17,7 @@ RUN npm install -g gulp
 # RUN npm install -g puppeteer
 
 # install dependencies
-COPY package.json /tmp/
+COPY package*.json /tmp/
 RUN cd /tmp && npm install
 RUN mkdir -p /usr/src/app && cp -a /tmp/node_modules /usr/src/app/
 
