--- a/deploy/complete/terraform/schema.yaml
+++ b/deploy/complete/terraform/schema.yaml
@@ -27,6 +27,7 @@ variableGroups:
     - app_name   
     - show_advanced
     - mushop_mock_mode_all
+    - newsletter_subscription_enabled
     # - mushop_atp
     # - mushop_oss
     
@@ -168,6 +169,12 @@ variables:
   mushop_mock_mode_all:
     type: boolean
     title: "Enable Mock Mode (If enabled, does NOT provision ATP Database, Streaming or Object Storage)"
+    required: true
+    visible: yes
+
+  newsletter_subscription_enabled:
+    type: boolean
+    title: "Enable Newsletter Subscription Function"
     required: true
     visible: yes
 
