services: patch version

--- a/deploy/complete/helm-chart/mushop/charts/catalogue/values.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/catalogue/values.yaml
@@ -3,7 +3,7 @@ replicaCount: 1
 image:
   repository: iad.ocir.io/oracle/ateam/mushop-catalogue
   tag: 1.4
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
 
 dbtools:
   repository: iad.ocir.io/oracle/ateam/mushop-dbtools
