--- a/deploy/complete/terraform/schema.yaml
+++ b/deploy/complete/terraform/schema.yaml
@@ -143,7 +143,7 @@ variableGroups:
       - db_connection_name
       - db_wallet_name
       - oos_bucket_name
-      - newsletter_email_sender_suffix
+      - newsletter_email_sender
       - newsletter_subscription_function_image
       - newsletter_subscription_function_image_version
     visible: false
