--- a/src/catalogue/docker/docker-compose-zipkin.yml
+++ b/src/catalogue/docker/docker-compose-zipkin.yml
@@ -1,16 +1,16 @@
 #
-# Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2019, 2021 Oracle and/or its affiliates. All rights reserved.
 # Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
 # 
 
-version: '2'
+version: '3'
 
 services:
     catalogue:
         build:
             context: ..
             dockerfile: ./Dockerfile
-        image: mushop/catalogue
+        image: mushop-catalogue-dev
         hostname: catalogue
         restart: always
         cap_drop:
@@ -19,7 +19,7 @@ services:
             - NET_BIND_SERVICE
         read_only: true
         volumes:
-            - Wallet_Creds:/usr/lib/oracle/19.3/client64/lib/network/admin/
+            - ./Wallet_Creds:/usr/lib/oracle/19.10/client64/lib/network/admin/
         environment:
             - reschedule=on-node-failure
             - OADB_USER=${OADB_USER}
@@ -27,7 +27,7 @@ services:
             - OADB_SERVICE=${OADB_SERVICE}
             - ZIPKIN=http://zipkin:9411/api/v1/spans
         ports:
-            - "8080:80"
+            - "8080:8080"
 
     zipkin:
         image: openzipkin/zipkin 
@@ -49,4 +49,4 @@ services:
 
     zipkinseed:
         image: alpine
-        command: /bin/sh -c 'sleep 10 ; wget http://catalogue/health ; wget http://catalogue/catalogue ; wget http://catalogue/catalogue/size ; wget http://catalogue/categories'
+        command: /bin/sh -c 'sleep 10 ; wget http://catalogue:8080/health ; wget http://catalogue:8080/catalogue ; wget http://catalogue:8080/catalogue/size ; wget http://catalogue:8080/categories'
