--- a/src/catalogue/docker/docker-compose.yml
+++ b/src/catalogue/docker/docker-compose.yml
@@ -1,9 +1,9 @@
 #
-# Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2019, 2021 Oracle and/or its affiliates. All rights reserved.
 # Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
 # 
 
-version: '2'
+version: '3'
 
 services:
     catalogue:
@@ -19,12 +19,12 @@ services:
             - NET_BIND_SERVICE
         read_only: true
         volumes:
-            - Wallet_Creds:/usr/lib/oracle/19.3/client64/lib/network/admin/
+            - ./Wallet_Creds:/usr/lib/oracle/19.10/client64/lib/network/admin/
         environment:
             - reschedule=on-node-failure
             - OADB_USER=${OADB_USER}
             - OADB_PW=${OADB_PW}
             - OADB_SERVICE=${OADB_SERVICE}
         ports:
-            - "8080:80"
+            - "8080:8080"
 
