--- a/deploy/complete/helm-chart/mushop/charts/catalogue/templates/catalogue-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/catalogue/templates/catalogue-deployment.yaml
@@ -57,3 +57,5 @@ spec:
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
       volumes: {{- include "catalogue.volumes" . | nindent 8 }}
+      securityContext:
+        fsGroup: 687467
