--- a/deploy/complete/helm-chart/mushop/values-prod.yaml
+++ b/deploy/complete/helm-chart/mushop/values-prod.yaml
@@ -24,5 +24,5 @@ ingress:
 
 api:
   env:
-    mediaUrl:                 # Object Storage URL for catalog image assets
+    mediaUrl:                 # Object Storage URL for catalogue image assets
     newsletterSubscribeUrl:   # Newsletter subscription endpoint (https://[API_GATEWAY_URL]/newsletter/subscribe)
