--- a/deploy/complete/helm-chart/setup/requirements.yaml
+++ b/deploy/complete/helm-chart/setup/requirements.yaml
@@ -1,16 +1,16 @@
-# Copyright (c) 2019, 2020 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2019-2021 Oracle and/or its affiliates. All rights reserved.
 # Licensed under the Universal Permissive License v 1.0 as shown at http://oss.oracle.com/licenses/upl.
 # 
 
 dependencies:
   # Prometheus
   - name: prometheus
-    version: 14.4.1
+    version: 14.6.0
     condition: prometheus.enabled
     repository: https://prometheus-community.github.io/helm-charts
   # Grafana
   - name: grafana
-    version: 6.14.1
+    version: 6.16.3
     condition: grafana.enabled
     repository: https://grafana.github.io/helm-charts
   # HPA Metrics
@@ -20,7 +20,7 @@ dependencies:
     repository: https://charts.helm.sh/stable
   # Ingress Controller
   - name: ingress-nginx
-    version: 3.34.0
+    version: 4.0.1
     condition: ingress-nginx.enabled
     repository: https://kubernetes.github.io/ingress-nginx
   # Service Catalog
@@ -30,7 +30,7 @@ dependencies:
     repository: https://kubernetes-sigs.github.io/service-catalog 
   # cert-manager
   - name: cert-manager
-    version: 1.4.1
+    version: 1.5.3
     condition: cert-manager.enabled
     repository: https://charts.jetstack.io
   # jenkins
