--- a/deploy/complete/helm-chart/setup/requirements.yaml
+++ b/deploy/complete/helm-chart/setup/requirements.yaml
@@ -5,22 +5,22 @@
 dependencies:
   # Prometheus
   - name: prometheus
-    version: 14.6.0
+    version: 15.1.1
     condition: prometheus.enabled
     repository: https://prometheus-community.github.io/helm-charts
   # Grafana
   - name: grafana
-    version: 6.16.3
+    version: 6.21.1
     condition: grafana.enabled
     repository: https://grafana.github.io/helm-charts
   # HPA Metrics
   - name: metrics-server
-    version: 2.11.4
+    version: 3.7.0
     condition: metrics-server.enabled
-    repository: https://charts.helm.sh/stable
+    repository: https://kubernetes-sigs.github.io/metrics-server
   # Ingress Controller
   - name: ingress-nginx
-    version: 4.0.1
+    version: 4.0.13
     condition: ingress-nginx.enabled
     repository: https://kubernetes.github.io/ingress-nginx
   # Service Catalog
@@ -30,7 +30,7 @@ dependencies:
     repository: https://kubernetes-sigs.github.io/service-catalog 
   # cert-manager
   - name: cert-manager
-    version: 1.5.3
+    version: 1.7.0
     condition: cert-manager.enabled
     repository: https://charts.jetstack.io
   # jenkins
