storefront new values for oda

--- a/deploy/complete/helm-chart/mushop/values-dev.yaml
+++ b/deploy/complete/helm-chart/mushop/values-dev.yaml
@@ -15,6 +15,14 @@ api:
     mediaUrl:                 # URL for catalogue image assets (https://objectstorage.[REGION].oraclecloud.com/n/[NAMESPACE]/b/[BUCKET_NAME]/o/)
     newsletterSubscribeUrl:   # Newsletter subscription endpoint (https://[API_GATEWAY_URL]/newsletter/subscribe)
 
+storefront:
+  env:
+    odaEnabled:               # Enables the Oracle Digital Assistant as widget on the storefront
+    odaUri:                   # Oracle Digital Assistant Channel URI to be used with MuShop
+    odaChannelId:             # Oracle Digital Assistant Channel Id to be used with MuShop
+    odaSecret:                # Used if client auth is enabled.
+    odaUserHiddenInitMessage: # Hidden Init Message if any. Makes the Digital Assistant proactive.
+
 carts:
   secrets:
     oadbAdminPassword:    # ADMIN password entered when provisioning ATP database
