--- a/deploy/complete/helm-chart/mushop/charts/storefront/values.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/storefront/values.yaml
@@ -2,8 +2,15 @@ replicaCount: 1
 
 image:
   repository: iad.ocir.io/oracle/ateam/mushop-storefront
-  tag: 2.2
+  tag: 2.3
   pullPolicy: Always
+
+env:
+  odaEnabled: false
+  odaUri:
+  odaChannelId:
+  odaSecret:
+  odaUserHiddenInitMessage:
 
 resources:
   limits:
