--- a/deploy/basic/terraform/tf_msz.tfvars.example
+++ b/deploy/basic/terraform/tf_msz.tfvars.example
@@ -59,3 +59,10 @@ use_only_always_free_eligible_resources = false
 # Object Storage
 object_storage_mushop_media_compartment_ocid = "" # e.g.: "ocid1.compartment..."
 object_storage_mushop_media_visibility       = "Private"
+
+# Oracle Digital Assistant
+oda_enabled           = false
+oda_uri               = ""
+oda_channel_id        = ""
+oda_secret            = ""
+oda_user_init_message = ""
